<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/highest_record_string"
            android:id="@+id/highest_record"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_record_string"
            android:id="@+id/current_record"
            android:layout_below="@+id/highest_record"
            android:layout_marginTop="5dp"
            />

        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/current_record"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/num1"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:singleLine="false"
            android:textSize="20sp"
            android:layout_below="@+id/line"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/hint1"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:layout_below="@+id/num1"
            android:layout_centerHorizontal="true"
            />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/hint1"
            android:layout_above="@+id/btn_start"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/image_hint" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_string"
            android:id="@+id/btn_start"
            android:layout_above="@+id/inputNum"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputNum"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btn_confirm"
            android:importantForAutofill="no"
            android:hint="@string/hint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_btn_string"
            android:id="@+id/btn_confirm"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>