<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.practice.jiandongxiao.memorypractice.Settings">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_hint_string"
        android:id="@+id/hint_string_switch"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/line0"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/hint_string_switch"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line0"
        android:text="@string/show_hint_image"
        android:id="@+id/hint_image_switch"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/hint_image_switch"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/num_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_picker_string"
        android:layout_below="@+id/line1"
        android:gravity="center_horizontal"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/card_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:ems="3"
        android:gravity="center"
        android:imeOptions="actionDone"
        />

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/card_num"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/speed_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_setting_string"
        android:layout_below="@+id/line2"
        android:gravity="center_horizontal"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/speed_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:ems="3"
        android:gravity="center"
        android:imeOptions="actionDone"
        />

    <View
        android:id="@+id/line3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/speed_setting"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/number_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_range_string"
        android:layout_below="@+id/line3"
        android:gravity="center_horizontal"
        android:textSize="16sp" />

    <NumberPicker
        android:id="@+id/range_num_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_range"
        android:layout_above="@+id/done_btn"
        android:layout_marginRight="50dp"
        android:layout_toLeftOf="@+id/line4"
        android:imeOptions="actionDone"
        >
    </NumberPicker>

    <View
        android:id="@+id/line4"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/number_range"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"/>

    <NumberPicker
        android:id="@+id/range_num_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_range"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/line4"
        android:layout_above="@+id/done_btn"
        android:imeOptions="actionDone"
        >
    </NumberPicker>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_string"
        android:id="@+id/done_btn"
        android:layout_alignParentBottom="true" />



</RelativeLayout>